tests/expectations/compiler/futures/future_not_all_passed_to_async_call_fail.out
Error [ETYC0372104]: Not all futures were consumed: f1
    --> compiler-test:16:22
     |
  16 |         return final { finalize_foo(f0, f3, f2, f5, f4); };
     |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
     |
     = Make sure all futures are consumed exactly once. Consume by passing to an async function call or async block.
